--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/react-transition-group": "^4.4.4",
     "bootstrap": "^5.1.3",
     "firebase": "^9.8.2",
+    "framer-motion": "^6.3.11",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-type-animation": "^1.1.3",
     "semantic-ui-react": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
