--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: '14'
+      - run: npm i
       - run: npm run build
       - name: GitHub Action for Firebase
         uses: w9jds/firebase-action@v1.5.0
